--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "homepage": "https://thaotpphung.github.io/kocokeeper/",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build --base=/",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
     "test-e2e": "pm2 start \"yarn run-mock-server\" --name server && yarn playwright test",
@@ -34,6 +37,7 @@
     "dayjs": "^1.11.11",
     "dompurify": "^3.1.1",
     "eslint-plugin-check-file": "^2.8.0",
+    "gh-pages": "^6.1.1",
     "lucide-react": "^0.378.0",
     "marked": "^12.0.2",
     "nanoid": "^5.0.7",
