--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,12 @@ jobs:
 
       - name: Build project
         run: npm run build
-
+        env: 
+          VITE_APP_API_URL: ${{ secrets.VITE_APP_API_URL }}
+          VITE_APP_ENABLE_API_MOCKING: ${{ secrets.VITE_APP_ENABLE_API_MOCKING }}
+          VITE_APP_MOCK_API_PORT: ${{ secrets.VITE_APP_MOCK_API_PORT }}
+          VITE_APP_URL: ${{ secrets.VITE_APP_URL }}    
+               
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
         with:
